--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -12,7 +12,6 @@
     </div>
 
     <div class="contact-grid">
-      <!-- Left: Contact Info -->
       <div class="contact-info glass">
         <h3 class="info-heading gradient-text">Contact Information</h3>
 
@@ -64,7 +63,7 @@
           <h4 class="social-heading">Follow Me</h4>
           <div class="social-links">
             <a
-              href="https://github.com"
+              href="https://github.com/Arsh-Pathan"
               target="_blank"
               class="social-btn"
               aria-label="GitHub"
