--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,9 +3,9 @@ import "../styles/global.css";
 import Background from "../components/Background.astro";
 import Hero from "../components/Hero.astro";
 import Skills from "../components/Skills.astro";
+import GithubStats from "../components/GithubStats.astro";
 import Projects from "../components/Projects.astro";
 import Certificates from "../components/Certificates.astro";
-import Interests from "../components/Interests.astro";
 import Contact from "../components/Contact.astro";
 import Footer from "../components/Footer.astro";
 ---
@@ -26,10 +26,10 @@ import Footer from "../components/Footer.astro";
 
     <main>
       <Hero />
-      <!--<Skills />-->
+      <Skills />
+      <GithubStats />
       <Projects />
       <Certificates />
-      <Interests />
       <Contact />
     </main>
 
